--- a/page.html
+++ b/page.html
@@ -150,9 +150,8 @@
 </body>
 <script src="./js/jquery-1.11.3.min.js"></script>
 <script src="./js/preload.min.js"></script>
+<script src="./js/jparticle.jquery.min.js" async></script>
+<script src="./js/core.js" async></script>
+<script src="./js/animation.min.js" async></script>
 <script src="./js/function.min.js"></script>
-<script src="./js/jparticle.jquery.min.js"></script>
-<script src="./js/core.js"></script>
-<script src="./js/animation.min.js"></script>
-
 </html>
